--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <title>Leyes antipiratería</title>
-    <link href="http://developers.cartodb.com/stylesheets/all.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="css/style.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
     <script src="http://developers.cartodb.com/javascripts/all.js" type="text/javascript"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/1.0.0-rc.2/lodash.min.js" type="text/javascript"></script>
   </head>
-  <body class="developers examples" onload="altoGuiso()">
+  <body onload="altoGuiso()">
 
-      <section class="shadow top">
-        <div class="content no_padding border code">
+      <section>
+        <div>
 
           <link rel="stylesheet" href="css/leaflet.css" />
           <!--[if IE]> <link rel="stylesheet" href="css/leaflet.ie.css" /> <![endif]-->
@@ -46,7 +45,8 @@
                 user_name:'pablocubico',
                 table_name: 'leyes_antipirateria_geo',
                 query: "SELECT {{table_name}}.* FROM {{table_name}} INNER JOIN leyesantipirateria ON leyes_antipirateria_geo.iso3 = leyesantipirateria.iso3;",
-                auto_bound: false
+                auto_bound: false,
+                opacity: .5,
               });
 
               // Capa con los marcadores
@@ -78,7 +78,7 @@
               map.addLayer(layerPuntos);
             }
           </script>
-          <div id="map"></div>
+          <div id="map" style="width: 1000px; height: 900px"></div>
         </div>
       </section>
 
