--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <title>Leyes antipiratería</title>
     <link href='http://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
-    <script src="http://developers.cartodb.com/javascripts/all.js" type="text/javascript"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/1.0.0-rc.2/lodash.min.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0rc1/zepto.min.js" type="text/javascript"></script>    
+    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/1.0.0-rc.2/lodash.min.js" type="text/javascript"></script>
   </head>
   <body onload="altoGuiso()">
 
@@ -44,9 +44,10 @@
                 map: map,
                 user_name:'pablocubico',
                 table_name: 'leyes_antipirateria_geo',
-                query: "SELECT {{table_name}}.* FROM {{table_name}} INNER JOIN leyesantipirateria ON leyes_antipirateria_geo.iso3 = leyesantipirateria.iso3;",
+                query: "SELECT {{table_name}}.*, leyesantipirateria.estado FROM {{table_name}} INNER JOIN leyesantipirateria ON leyes_antipirateria_geo.iso3 = leyesantipirateria.iso3;",
                 auto_bound: false,
                 opacity: .5,
+                tile_style: "#leyes_antipirateria_geo [ estado = 3 ] { polygon-fill: #FF3142; } #leyes_antipirateria_geo [ estado = 2 ] { polygon-fill: #FCE406; } #leyes_antipirateria_geo [ estado = 1 ] { polygon-fill: #8DF1F3; }"
               });
 
               // Capa con los marcadores
@@ -57,7 +58,7 @@
                 query: "SELECT * FROM {{table_name}}",
                 tile_style: "#{{table_name}}{marker-fill:#ff6600; marker-width: 10; marker-type: arrow;marker-line-color: white;marker-line-width: 3;}",
                 opacity: 1,
-                interactivity: "nombre, nombrelargo, autoropartido, sancionada, tramite, procedimiento, afavor, encontra",
+                interactivity: "nombre, nombrelargo, autoropartido, sancionada, tramite, procedimiento, afavor, encontra, pais_es, vigencia, anio",
                 featureOver: function(ev,latlng,pos,data) {
                   document.body.style.cursor = "pointer";
                 },
@@ -86,12 +87,15 @@
     <script type="text/template" id="popUpTemplate">
       <h3><%= nombre %></h3>
       <h5><%= nombrelargo %></h5>
+      <p><%= pais_es %> (<%= anio %>)</p>
       <label>Autor/Partido:</label>
       <p><%= autoropartido %></p>
       <label>Trámite:</label>
       <p><%= tramite %></p>
       <label>Sanción:</label>
       <p><%= sancionada %></p>
+      <label>Entrada en vigencia:</label>
+      <p><%= vigencia %></p>
       <label>Procedimiento:</label>
       <p><%= procedimiento %></p>
       <label>A favor:</label>
