--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0rc1/zepto.min.js" type="text/javascript"></script>    
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/1.0.0-rc.2/lodash.min.js" type="text/javascript"></script>
     <style type="text/css">
+      html,body {
+        height: 100%;
+      }
+
       body {
         background: #444;
+        margin: 0px;
       }
 
       #map {
         border: 4px solid #eee;
-        width: 960px;
-        height: 500px;
+        width: 90%;
+        height: 90%;
         box-shadow: 0px 2px 15px black;
-        margin: auto;
+        margin: 20px auto;
       }
     </style>
   </head>
